objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Advanced</fullName>
        <description>Complex Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Indirect Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Simple</fullName>
        <description>Simple Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Intra-Op</fullName>
        </values>
        <values>
            <fullName>Post-Op</fullName>
        </values>
        <values>
            <fullName>Pre-Op</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Simple Sales Process</fullName>
        <description>Simple Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Intra-Op</fullName>
        </values>
        <values>
            <fullName>Post-Op</fullName>
        </values>
        <values>
            <fullName>Pre-Op</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Age__c</fullName>
        <formula>Today() - CreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Any_specific_feedback_you_wish_to_share__c</fullName>
        <label>Any specific feedback you wish to share?</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <inlineHelpText>This is used in an equation to generate a random number</inlineHelpText>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Budget_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Budget Approved</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Coaching__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching</label>
        <referenceTo>WorkCoaching</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Communicate_Readiness_to_Nurse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communicate Readiness to Nurse</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Competition__c</fullName>
        <description>Used for deal registration.</description>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Competitive_Coach__c</fullName>
        <formula>CASE( Competitor__c ,"Competitor A",  HYPERLINK("/resource/1266967954000/Competitive_Product_Comparison", "Competitor A Overview" &amp; BR() &amp; "Case Studies vs. Competitor A " &amp; BR() &amp; "Competitor A Comparison Matrix" , "_blank"),"Competitor B",HYPERLINK("/resource/1266967954000/Competitive_Product_Comparison", "Competitor B Overview" &amp; BR() &amp; "Case Studies vs. Competitor B " &amp; BR() &amp; "Competitor B Comparison Matrix" , "_blank"),"Competitor C", HYPERLINK("/resource/1266967954000/Competitive_Product_Comparison", "Competitor C Overview" &amp; BR() &amp; "Case Studies vs. Competitor C " &amp; BR() &amp; "Competitor C Comparison Matrix" , "_blank"), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Coach</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Complete_ROI_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Complete ROI Analysis</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Confirm_cable_are_securely_connected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm cable are securely connected</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Contact_City__c</fullName>
        <label>Contact City</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Company__c</fullName>
        <label>Contact Company</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Country__c</fullName>
        <label>Contact Country</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_State_Province__c</fullName>
        <label>Contact State Province</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contract_Terms__c</fullName>
        <description>Used for Sales Path</description>
        <label>Contract Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CloseDate  -  Random_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>DB_Amount__c</fullName>
        <label>DB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the "Perfect Data" SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_Left_Until_Expire__c</fullName>
        <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Deal_Forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Forward</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Deal_ID__c</fullName>
        <description>Used for deal registrations</description>
        <label>Deal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Deal_Source__c</fullName>
        <description>Used for deal registration.</description>
        <label>Deal Source</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Decision_Role__c</fullName>
        <description>Used for deal registration.</description>
        <label>Decision Role</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Demo_Presentation_Date__c</fullName>
        <description>Used for Sales Path</description>
        <label>Demo Presentation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Did_we_meet_your_expectations__c</fullName>
        <label>Did we meet your expectations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Discount_Approved__c</fullName>
        <label>Discount Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Disposables_Safely_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposables Safely Removed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Distributor__c</fullName>
        <description>Used for deal registration.</description>
        <label>Distributor</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Engage_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Engage Legal</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Equipment_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Collected</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Equipment_brought_to_SPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment brought to SPD</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Equipment_packaged_correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment packaged correctly</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Feedback_URL__c</fullName>
        <label>Feedback URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Forwarded_Lead_ID__c</fullName>
        <description>The field is updated with a lead id when the opportunity details are forwarded to a partner as a lead.</description>
        <label>Forwarded Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>How_would_you_rate_the_service__c</fullName>
        <label>How would you rate the service?</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Implementation_Start__c</fullName>
        <label>Implementation Start</label>
        <type>Date</type>
    </fields><fields>
        <fullName>IndStatus__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;
IF(AND(Age__c &lt; 30, Not(IsClosed) ), "01541000001Qwub&amp;oid="&amp;$Organization.Id,
IF( AND(Age__c&lt;45, NOT(IsClosed)), "01541000001Qwuc&amp;oid="&amp;$Organization.Id, 
IF(AND(Age__c&gt;60, NOT(IsClosed)), "01541000001Qwud&amp;oid="&amp;$Organization.Id,
IF(IsWon, "01541000001Qwub&amp;oid="&amp;$Organization.Id,
IF(NOT(IsWon), "01541000001Qwub&amp;oid="&amp;$Organization.Id,
"01541000001Qwub&amp;oid="&amp;$Organization.Id
))))),"",22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dependent on Age field.  Good = Age &lt; 30 Days.  Warning = Age &lt; 45 Days. Poor = Age &gt; 60 Days.</inlineHelpText>
        <label>Age Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Internal_Pricing_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Sales Path</description>
        <label>Internal Pricing Approvals</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Intial_Estimated_Close_Date__c</fullName>
        <description>Used for deal registration.</description>
        <label>Initial Estimated Close Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Issues_Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issues Logged</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Nurse__c</fullName>
        <label>Nurse</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OR_ID__c</fullName>
        <label>OR ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Preference_Card_Changes_Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preference Card Changes Logged</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Preference_Card__c</fullName>
        <formula>HYPERLINK("https://surgicalsolutions.my.salesforce.com/apex/PreferenceCard?oppId=00641000005Qjz2&amp;pcId=a3z410000005TCP", "Preference Card")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preference Card</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Procedure_Data_Time__c</fullName>
        <label>Procedure Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Procedure_End_Date_Time__c</fullName>
        <label>Procedure End Date &amp; Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Procedure_Name_Owner__c</fullName>
        <formula>Name&amp; ":"&amp; $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure Name &amp; Owner</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC10001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC20002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC50000</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Project_Budget__c</fullName>
        <description>Used for deal registration.</description>
        <label>Project Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for deal registration.</description>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Project_Manager_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Sales Path</description>
        <label>Project Manager Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Projected_Durations__c</fullName>
        <formula>Round(Projected_Finish__c - Implementation_Start__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Durations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Projected_Finish__c</fullName>
        <label>Projected Finish</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Pull_Inventory_per_Preference_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Inventory per Preference Card</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>RC_Keywords__c</fullName>
        <description>Keyword list used by the Relevant Content package.  It is recommended that this field is NOT added to the page layout.  To add fields containing keywords, edit this formula field to include additional fields separated by spaces.</description>
        <formula>Name+ " " + Account.Name + " " + TEXT(Account.Industry)</formula>
        <inlineHelpText>Relevant keywords for this record</inlineHelpText>
        <label>RC_Keywords</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Random_Number__c</fullName>
        <formula>1 + MOD( VALUE(AutoNumber__c) * 12345678 , 10000)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Random Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Date the deal registration expires</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Setup_Room_Appropriately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Room Appropriately</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Stalled_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stalled Opportunity</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Status_Value__c</fullName>
        <formula>IF( CloseDate_TODAY__c &gt;0, "good", "bad")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Surgeon__c</fullName>
        <label>Surgeon</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Things_to_Know__c</fullName>
        <label>Things to Know:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"), 
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)), 
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)) 
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><fields>
        <fullName>View_Forwarded_Lead__c</fullName>
        <formula>if(Deal_Forward__c, HYPERLINK( "/" &amp; Forwarded_Lead_ID__c, "View Forwarded Lead", "_self"),"Not Forwarded")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Forwarded Lead</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Winning_Competitor__c</fullName>
        <label>Winning Competitor</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>cv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cv</label>
        <type>Checkbox</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllOpenOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Procedure_Data_Time__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OR_ID__c</columns>
        <columns>Nurse__c</columns>
        <columns>Surgeon__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Simple</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>12/20/2016</value>
        </filters>
        <label>* My Procedures Today</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Simple</value>
        </filters>
        <label>Closing Next Month</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Simple</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyOpportunitiesPartner</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Deals</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Advanced</fullName>
        <active>true</active>
        <businessProcess>Advanced</businessProcess>
        <description>This is a complex Opportunity with products and forecasting</description>
        <label>Advanced</label>
    </recordTypes><recordTypes>
        <fullName>IndirectPartner</fullName>
        <active>true</active>
        <businessProcess>Indirect Sales Process</businessProcess>
        <label>Indirect (Partner)</label>
    </recordTypes><recordTypes>
        <fullName>SalesWaveScripted</fullName>
        <active>true</active>
        <businessProcess>Simple</businessProcess>
        <label>SalesWaveScripted</label>
    </recordTypes><recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <businessProcess>Simple Sales Process</businessProcess>
        <description>This is a basic Opportunity with no products</description>
        <label>Simple</label>
    </recordTypes><validationRules>
        <fullName>Checkboxes_required_for_IntraOp_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(StageName, "Intra-Op")
&amp;&amp;
(!Pull_Inventory_per_Preference_Card__c ||
!Setup_Room_Appropriately__c ||
!Confirm_cable_are_securely_connected__c ||
!Communicate_Readiness_to_Nurse__c)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Please complete Pre-Op checklist before advancing to Intra-Op</errorMessage>
    </validationRules><validationRules>
        <fullName>Reason_Lost_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND (  ISPICKVAL( StageName, "Closed Lost"), ISPICKVAL( Reason_Lost__c , "")   )</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>If the stage equals closed - lost, then the reason lost is a required field.</errorMessage>
    </validationRules></CustomObject>